# MT5

./: .clinerules  .cursorrules  .env.example  .gitignore  ACTIVATE_OPTIMIZER.sh  ACTIVATE_OPTIMIZER_IMPROVED.sh  AI_REVIEW_FEEDBACK_TASK_102.md  AI_RULES.md  API_PROXY_SETUP_GUIDE.md  BRIDGE_ENHANCEMENT_REPORT.md  BRIDGE_TEST_REPORT.md  CENTRAL_COMMAND_IMPROVEMENTS_v7.7.md  CENTRAL_COMMAND_TASK116.md  CHAOS_TEST_RESULTS.json  CLAUDE_START.txt  CLEANUP_STRATEGY.md  CODE_REVIEW_HONEST_ASSESSMENT.md  COMPREHENSIVE_CODE_REVIEW_133_134.md  CONTEXT.md  CONTEXT_PACK_METADATA.json  CONTEXT_archive_template.md  CONVERSATION_SUMMARY_20251221.md  DEPLOYMENT_COMPLETION_REPORT.md  DEPLOYMENT_FINAL_CONFIRMATION.txt  DEPLOYMENT_LAUNCH_CHECKLIST.md  DEPLOYMENT_PREFLIGHT_CHECK.txt  DEPLOYMENT_PRODUCTION_LOG.txt  DEPLOYMENT_READY.txt  DEPLOYMENT_READY_CONFIRMATION.txt  DEPLOYMENT_SUCCESS_REPORT.md  DEVOPS_PATCH_DEPLOYMENT_STATUS.txt  DEVOPS_PATCH_PoE_IMPLEMENTATION.md  DIRECT_DEPLOY.md  DUPLICATE_FILE_ANALYSIS.md  Dockerfile.api  Dockerfile.serving  Dockerfile.strategy  ETL_PIPELINE_REPORT.json  EXPORT_SUMMARY.md  EXTERNAL_AI_CALL_FAILURE_QUICK_REFERENCE.md  (+227 more)
.claude/: project_config.json
.cursor/: rules.md
_archive_20251222/: GEMINI_NOTION_DESIGN_PROMPT.md  GEMINI_QUICK_PROMPT.txt  GEMINI_QUICK_REFERENCE.md  ISSUE_009_GITHUB_PUSH_SUMMARY.txt  ISSUE_010_GITHUB_PUSH_SUMMARY.txt  PROJECT_STATUS_ITERATION3.txt  recreate_nexus_page.py  requirements.txt  test_review_sample.py
alembic/: env.py
branches/: README.md
config/: assets.yaml  features.yaml  live_strategies.yaml  live_strategies.yaml.bak2  ml_training_config.yaml  news_historical.yaml  risk_limits.yaml  ssh_config_template  strategies.yaml  strategy_btcusd.yaml  trading_config.yaml
configs/: server_matrix.yml
data/: registry.db  sample_features.parquet
deploy/: launch_task_104_production.sh  start_live_loop_production.py  task_104_deployment_config.yaml
docs/: # [System Instruction MT5-CRS Development Protocol v3.4].md  # [System Instruction MT5-CRS Development Protocol v3.6].md  # [System Instruction MT5-CRS Development Protocol v3.8].md  AI_COST_OPTIMIZATION_DELIVERY.md  BACKTEST_GUIDE.md  (+125 more)
(+1777 files in other folders)
