[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mt5-crs"
version = "1.0.0"
description = "MT5 Cryptocurrency Trading Research System with Feast Feature Store"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

authors = [
    {name = "MT5-CRS Team", email = "admin@mt5-crs.local"}
]

keywords = ["trading", "machine-learning", "feature-store", "feast", "xgboost"]

dependencies = [
    "feast[redis,postgres]>=0.28.0",
    "xgboost>=2.0.0",
    "pandas>=1.5.0",
    "numpy>=1.23.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "pyzmq>=24.0",
    "redis>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/mt5-crs/mt5-crs"
Documentation = "https://docs.mt5-crs.local"
Repository = "https://github.com/mt5-crs/mt5-crs.git"
Issues = "https://github.com/mt5-crs/mt5-crs/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["feature_store/*.yaml", "feature_store/**/*.py"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
